tests/scanner/token_after_error.check
Token Number                Line: 1	Column: 1	Value: 50
Token <error>               Line: 1	Column: 3	
Token Number                Line: 1	Column: 4	Value: 51

1,3: error: invalid character
	50:51
	  ^
